Mensagem descritiva do que foi alterado

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
         </p>
         <ul>
           <li>
-            <a href="#"><img src="assets/instagram.svg" alt="Instagram" />@irodti</a>
+            <a href="https://www.instagram.com/irodti93/"><img src="assets/instagram.svg" alt="Instagram" /></a>
           </li>
           <li>
-            <a href="#"><img src="assets/linkedin.svg" alt="Linkedin" />iuri-rodrigues-80968910b</a>
+            <a href="https://www.linkedin.com/in/iuri-rodrigues-80968910b/"><img src="assets/linkedin.svg" alt="Linkedin" /></a>
           </li>
         </ul>
       </div>
@@ -227,14 +227,14 @@ a tomada de decisões estratégicas.
         </p>
         <div class="footer__contact mb-m">
           <span class="mb-m">irodti93@gmail.com</span>
-          <span> 24 99880-9799</span>
+          <span> 21 98195-6112</span>
         </div>
         <ul class="mb-l">
           <li>
-            <a href="#"><img src="assets/instagram.svg" alt="Instagram" />@irodti</a>
+            <a href="https://www.instagram.com/irodti93/"><img src="assets/instagram.svg" alt="Instagram" /></a>
           </li>
           <li>
-            <a href="#"><img src="assets/linkedin.svg" alt="Linkedin" />iuri-rodrigues-80968910b</a>
+            <a href="https://www.linkedin.com/in/iuri-rodrigues-80968910b/"><img src="assets/linkedin.svg" alt="Linkedin" /></a>
           </li>
         </ul>
         <p class="footer__copyright">
