--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       rel="stylesheet"
     />
   </head>
+  <iframe style="border-radius:5px" src="https://open.spotify.com/embed/playlist/37i9dQZF1E35KdXqA0PqSS?utm_source=generator&theme=0" width="250" height="352" frameBorder="0" allowfullscreen=""
+   allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+    loading="lazy"></iframe>
   <body>
     <!-- navbar -->
     <nav class="navbar">
