--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
       rel="stylesheet"
     />
   </head>
-  <iframe style="border-radius:5px" src="https://open.spotify.com/embed/playlist/37i9dQZF1E35KdXqA0PqSS?utm_source=generator&theme=0" width="250" height="352" frameBorder="0" allowfullscreen=""
-   allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-    loading="lazy"></iframe>
+  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1EQntZpEGgfBif?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay;
+   clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
   <body>
     <!-- navbar -->
     <nav class="navbar">
